# visionmagic

./: CMakeLists.txt  LICENSE.txt  commondefs.pri  license_header.txt  visionMagic.pro
docs/: README  doxygen.sh  manual.txt
scripts/: build.bat  build.sh  release.sh  replaceVersion.sh
src/: boost.pri  compilerOps.pri  main.cpp  opencv.pri  qwt.pri  src.pro
src/gui/: acdsettings.cpp  acdsettings.h  dnmapgeneratordialog.cpp  dnmapgeneratordialog.h  dnmapgeneratordialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingsdialog_acquisition.ui  settingsdialog_analysis.ui  settingsdialog_camera.ui  settingsdialog_focus.ui  settingsdialog_ledlighting.ui  settingsdialog_mes.ui  settingsdialog_motors.ui  settingsdialog_spa.ui  splashscreen.cpp  splashscreen.h  templatemodel.cpp  templatemodel.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  version.h
src/modules/cameraGrabber/: avtcamera.cpp  avtcamera.h  camera.cpp  camera.h  cameragrabber.cpp  cameragrabber.h  opencvcamera.cpp  opencvcamera.h
src/modules/debugLogger/: dlogger.cpp  logger.cpp  logger.h  messagelogger.cpp  messagelogger.h  messagelogger.ui
src/modules/exceptions/: EncapsulationExceptions.h  acdexceptions.h  myexception.h
src/modules/imageAcquisition/: imageacquisition.cpp  imageacquisition.h  imageprovider.cpp  imageprovider.h  imageviewer.cpp  imageviewer.h
src/modules/imageAnalysis/: encapdelaminspection.cpp  encapdelaminspection.h  imageanalysis.cpp  imageanalysis.h  imageanalysisalgorithms.cpp  imageanalysisalgorithms.h  line.cpp  line.h  linefit.cpp  linefit.h  mathfun.h
src/modules/logger/: dlogger.cpp  messagelogger.cpp  messagelogger.h
src/modules/qwt/: qwt.pro  qwtconfig.pri
src/modules/qwt/src/: qwt_global.h
src/modules/sceneRendering/: QOpenCVWidget.cpp  QOpenCVWidget.h  chipgraphicitem.cpp  chipgraphicitem.h  nozzlehealthviewer.cpp  nozzlehealthviewer.h  scenevisualization.cpp  scenevisualization.h
